2002-10-01  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* pythonlib/email: Sync up with email 2.4.

2002-09-30  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (sendmail): Accept a whole message string rather than
	header and body strings as two separate arguments.

	(body_as_raw_string): New function.
	(headers_as_list): Ditto.
	(headers_as_raw_string): Ditto.
	(headers_as_string): Ditto.
	(rename_headers): Ditto.
	
	* Deliver.py: Use an email.Message object rather than an
	rfc822.Message object and message body.

	* MTA.py: Ditto.

	* MessageLogger.py: Ditto.

2002-09-26  Tim Legant  <tim@catseye.net>

	* FilterParser.py (FilterParser.__expandmacros): Fixed bug where
	more than one instance of the same macro in a rule failed
	miserably.

2002-09-20  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (decode_header): New function.

2002-09-12  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (formataddr): Remove function.

	(make_date): Utilize email.Utils.formatdate().

2002-09-11  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* pythonlib: New directory to house any overrides of standard
	modules and packages.

	* pythonlib/email: Add version 2.3 of the `email' package.

2002-08-29  <sen_ml@eccosys.com>

	* FilterParser.py: Make the parser recognize the "hold" action by
	adding "hold" to in_action.

	* Defaults.py: Added documentation for "hold" action to
	ACTION_INCOMING, ACTION_FAIL_DATED, ACTION_EXPIRED_DATED,
	ACTION_FAIL_SENDER, ACTION_FAIL_KEYWORD.

2002-08-22  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* SMTP.py (Connection.__connect): Add support for SSL.

	* Defaults.py (SMTPSSL, SMTPSSL_KEYFILE, SMTPSSL_CERTFILE): New
	variables.
	
2002-08-21  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Defaults.py (SMTPAUTH_USERNAME, SMTPAUTH_PASSWORD): New
	variables.
	
	* SMTP.py (Connection.__connect): Add support for SMTP
	authentication.
	